--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@
     .content {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
       text-align: left;
       padding: 70px;
